manifests/03-argo-rollout-manual-beta/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 03-rollout-header-split-demo
  labels:
    istio-injection: enabled
