manifests/03-argo-rollout-manual-beta/k8s/02-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-canary
  namespace: 03-rollout-header-split-demo
  labels:
    app: myapp  
spec:
  selector:
    app: myapp
  ports:
  - name: http
    port: 8000
    targetPort: 8000
