manifests/03-argo-rollout-manual-beta/k8s/03-main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: 03-rollout-header-split-demo
spec:
  selector:
    app: myapp
  ports:
  - name: http
    port: 8000
    targetPort: 8000
