manifests/03-argo-rollout-manual-beta/k8s/05-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: myapp-rollout-split-gateway
  namespace: 03-rollout-header-split-demo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "myapp.rollout.split.local"
