manifests/03-argo-rollout-manual-beta/k8s/04-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: myapp
  namespace: 03-rollout-header-split-demo
spec:
  hosts:
  - "myapp.03.local"
  gateways:
  - myapp-rollout-split-gateway
  http:
  - name: primary # must match the name in Argo Rollout's trafficRouting.istio.virtualServices.routes
    route:
    - destination:
        host: myapp-stable.03-rollout-header-split-demo.svc.cluster.local
      weight: 100
    - destination:
        host: myapp-canary.03-rollout-header-split-demo.svc.cluster.local
      weight: 0
